--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -86,7 +86,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="You don't have account? Sign u now!"
+        android:text="You don't have account? Sign up now!"
         android:textAllCaps="false"
         android:fontFamily="@font/montserrat_regular"
         android:textColor="@color/black"
