--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     style="@style/Theme.AppCompat.Light.NoActionBar"
     android:background="@color/colorAccent_1">
-
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -22,7 +21,7 @@
         android:layout_marginTop="70dp"
         android:background="@drawable/main_bg">
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_task"
+            android:id="@+id/rv_tasks"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="16dp"
@@ -30,6 +29,7 @@
     </LinearLayout>
 
     <ImageView
+        android:id="@+id/btn_add"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:src="@drawable/ic_add"
@@ -38,5 +38,6 @@
         android:layout_marginTop="620dp"
         android:layout_marginRight="18dp"
         android:layout_marginBottom="18dp"
-        android:layout_alignParentBottom="true"/>
+        android:layout_alignParentBottom="true"
+        android:verticalScrollbarPosition="defaultPosition"/>
 </RelativeLayout>
