--- a/app/src/main/res/layout/item_row_task.xml
+++ b/app/src/main/res/layout/item_row_task.xml
@@ -24,6 +24,7 @@
             android:layout_marginBottom="16dp"/>
 
         <TextView
+            android:id="@+id/task_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="Description"
