--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -34,6 +34,7 @@
         android:background="@drawable/login_bg"
         android:fontFamily="@font/montserrat_regular"
         android:textColor="@color/black"
+        android:textSize="12sp"
         android:lines="1"
         android:layout_gravity="center"
         android:layout_marginBottom="27dp"
@@ -61,6 +62,7 @@
         android:fontFamily="@font/montserrat_regular"
         android:lines="1"
         android:textColor="@color/black"
+        android:textSize="12sp"
         android:layout_gravity="center"
         android:layout_marginBottom="27dp"
         android:layout_marginLeft="55dp"
@@ -87,6 +89,7 @@
         android:fontFamily="@font/montserrat_regular"
         android:lines="1"
         android:textColor="@color/black"
+        android:textSize="12sp"
         android:layout_gravity="center"
         android:layout_marginBottom="55dp"
         android:layout_marginLeft="55dp"
