update db from Realm to ROOM

--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -68,7 +68,7 @@
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:lines="3"/>
+            android:maxLines="5"/>
 
         <Button
             android:id="@+id/btn_input"
