--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -13,7 +13,9 @@
         android:src="@drawable/ic_menu"
         android:layout_marginLeft="14dp"
         android:layout_marginTop="14dp"
-        android:layout_marginBottom="14dp"/>
+        android:layout_marginBottom="14dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,16 +30,16 @@
             tools:listitem="@layout/item_row_task"/>
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/btn_add"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:src="@drawable/ic_add"
-        android:background="@drawable/circle"
-        android:layout_marginLeft="300dp"
-        android:layout_marginTop="620dp"
-        android:layout_marginRight="18dp"
-        android:layout_marginBottom="18dp"
-        android:layout_alignParentBottom="true"
-        android:verticalScrollbarPosition="defaultPosition"/>
-</RelativeLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_add"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
