--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,6 +56,7 @@
 
     <EditText
         android:id="@+id/et_password"
+        android:inputType="textPassword"
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:background="@drawable/login_bg"
@@ -66,8 +67,7 @@
         android:layout_marginBottom="55dp"
         android:layout_marginLeft="55dp"
         android:layout_marginRight="55dp"
-        android:padding="10dp"
-        android:inputType="textPassword"/>
+        android:padding="10dp"/>
 
     <Button
         android:id="@+id/btn_login"
