--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -81,6 +81,7 @@
 
     <EditText
         android:id="@+id/et_password_sign_up"
+        android:inputType="textPassword"
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:background="@drawable/login_bg"
